rumbas/src/question/snapshots/rumbas__question__examples_questioninput__compile_examples-22.snap
---
source: rumbas/src/question/mod.rs
expression: "&example"
---
statement: "template:template_key"
advice: "template:template_key"
parts: "template:template_key"
builtin_constants:
  e: false
  pi: false
  i: false
custom_constants: "template:template_key"
variables:
  nonjmetext§:
    definition: "file:path/to/file"
    description: nonjmetext§
    template_type: number
grouped_variables:
  nonjmetext§:
    nonjmetext§:
      definition: "file:path/to/file"
      description: nonjmetext§
      template_type: number
variables_test:
  condition: x^5
  max_runs: 2
functions:
  nonjmetext§:
    template_key: template_key
    default_value: ~
preamble:
  js: "file:path/to/file"
  css: "file:path/to/file"
navigation:
  can_regenerate: false
  show_title_page: false
  confirm_when_leaving: false
extensions:
  chemistry: false
  download_text_file: false
  eukleides: false
  geogebra: false
  graphs: false
  jsx_graph: false
  linear_algebra: false
  linear_codes: false
  optimisation: false
  permutations: false
  polynomials: false
  quantities: false
  random_person: false
  stats: false
  sqlite: false
  text: false
  written_number: false
diagnostic_topic_names: "template:template_key"
resources: "template:template_key"
custom_part_types: ~
rulesets: ~

