rumbas/src/question/snapshots/rumbas__question__examples_questioninput__compile_examples-23.snap
---
source: rumbas/src/question/mod.rs
expression: "&example"
---
statement:
  template_key: template_key
  default_value: ~
advice:
  template_key: template_key
  default_value: ~
parts:
  template_key: template_key
  default_value: ~
builtin_constants:
  e: "template:template_key"
  pi: "template:template_key"
  i: "template:template_key"
custom_constants:
  template_key: template_key
  default_value: ~
variables:
  nonjmetext§:
    definition: "template:template_key"
    description: "template:template_key"
    template_type: random_range
grouped_variables:
  nonjmetext§:
    nonjmetext§:
      definition: "template:template_key"
      description: "template:template_key"
      template_type: random_range
variables_test:
  condition: "template:template_key"
  max_runs: "template:template_key"
functions: "template:template_key"
preamble:
  js: "template:template_key"
  css: "template:template_key"
navigation:
  can_regenerate: "template:template_key"
  show_title_page: "template:template_key"
  confirm_when_leaving: "template:template_key"
extensions:
  chemistry: "template:template_key"
  download_text_file: "template:template_key"
  eukleides: "template:template_key"
  geogebra: "template:template_key"
  graphs: "template:template_key"
  jsx_graph: "template:template_key"
  linear_algebra: "template:template_key"
  linear_codes: "template:template_key"
  optimisation: "template:template_key"
  permutations: "template:template_key"
  polynomials: "template:template_key"
  quantities: "template:template_key"
  random_person: "template:template_key"
  stats: "template:template_key"
  sqlite: "template:template_key"
  text: "template:template_key"
  written_number: "template:template_key"
diagnostic_topic_names:
  template_key: template_key
  default_value: ~
resources:
  template_key: template_key
  default_value: ~
custom_part_types: ~
rulesets:
  nonjmetext§:
    type: Simplification
    rules:
      simplify_basic: false
      cancel_unit_factors: false
      cancel_unit_powers: false
      cancel_unit_denominators: false
      cancel_zero_factors: false
      omit_zero_terms: false
      cancel_zero_powers: false
      cancel_powers_with_base_zero: false
      collect_numbers: false
      constants_first: false
      collect_sqrt_products: false
      collect_sqrt_divisions: false
      cancel_sqrt_square: false
      evaluate_powers_of_numbers: false
      rewrite_to_no_leading_minus: false
      simplify_fractions: false
      simplify_trigonometric: false
      collect_terms: false
      collect_powers_of_common_factors: false
      collect_like_fractions: false
      order_canonical: false
      expand_brackets: false

