rumbas/src/question/snapshots/rumbas__question__examples_questioninput__compile_examples-24.snap
---
source: rumbas/src/question/mod.rs
expression: "&example"
---
statement: ~
advice: ~
parts: ~
builtin_constants:
  e:
    template_key: template_key
    default_value: ~
  pi:
    template_key: template_key
    default_value: ~
  i:
    template_key: template_key
    default_value: ~
custom_constants: ~
variables:
  nonjmetext§:
    definition:
      template_key: template_key
      default_value: ~
    description:
      template_key: template_key
      default_value: ~
    template_type: range
grouped_variables:
  nonjmetext§:
    nonjmetext§:
      definition:
        template_key: template_key
        default_value: ~
      description:
        template_key: template_key
        default_value: ~
      template_type: range
variables_test:
  condition:
    template_key: template_key
    default_value: ~
  max_runs:
    template_key: template_key
    default_value: ~
functions:
  template_key: template_key
  default_value: ~
preamble:
  js:
    template_key: template_key
    default_value: ~
  css:
    template_key: template_key
    default_value: ~
navigation:
  can_regenerate:
    template_key: template_key
    default_value: ~
  show_title_page:
    template_key: template_key
    default_value: ~
  confirm_when_leaving:
    template_key: template_key
    default_value: ~
extensions:
  chemistry:
    template_key: template_key
    default_value: ~
  download_text_file:
    template_key: template_key
    default_value: ~
  eukleides:
    template_key: template_key
    default_value: ~
  geogebra:
    template_key: template_key
    default_value: ~
  graphs:
    template_key: template_key
    default_value: ~
  jsx_graph:
    template_key: template_key
    default_value: ~
  linear_algebra:
    template_key: template_key
    default_value: ~
  linear_codes:
    template_key: template_key
    default_value: ~
  optimisation:
    template_key: template_key
    default_value: ~
  permutations:
    template_key: template_key
    default_value: ~
  polynomials:
    template_key: template_key
    default_value: ~
  quantities:
    template_key: template_key
    default_value: ~
  random_person:
    template_key: template_key
    default_value: ~
  stats:
    template_key: template_key
    default_value: ~
  sqlite:
    template_key: template_key
    default_value: ~
  text:
    template_key: template_key
    default_value: ~
  written_number:
    template_key: template_key
    default_value: ~
diagnostic_topic_names: ~
resources: ~
custom_part_types: ~
rulesets:
  nonjmetext§:
    type: Simplification
    rules:
      simplify_basic: "template:template_key"
      cancel_unit_factors: "template:template_key"
      cancel_unit_powers: "template:template_key"
      cancel_unit_denominators: "template:template_key"
      cancel_zero_factors: "template:template_key"
      omit_zero_terms: "template:template_key"
      cancel_zero_powers: "template:template_key"
      cancel_powers_with_base_zero: "template:template_key"
      collect_numbers: "template:template_key"
      constants_first: "template:template_key"
      collect_sqrt_products: "template:template_key"
      collect_sqrt_divisions: "template:template_key"
      cancel_sqrt_square: "template:template_key"
      evaluate_powers_of_numbers: "template:template_key"
      rewrite_to_no_leading_minus: "template:template_key"
      simplify_fractions: "template:template_key"
      simplify_trigonometric: "template:template_key"
      collect_terms: "template:template_key"
      collect_powers_of_common_factors: "template:template_key"
      collect_like_fractions: "template:template_key"
      order_canonical: "template:template_key"
      expand_brackets: "template:template_key"

