rumbas/src/question/snapshots/rumbas__question__examples_questioninput__compile_examples-26.snap
---
source: rumbas/src/question/mod.rs
expression: "&example"
---
statement:
  content:
    nonjmetext§: "template:template_key"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
advice:
  content:
    nonjmetext§: "template:template_key"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
parts: "template:template_key"
builtin_constants: "template:template_key"
custom_constants: "template:template_key"
variables:
  nonjmetext§:
    definition: "file:path/to/file"
    description: nonjmetext§
    template_type: "template:template_key"
    group: nonjmetext§
variables_test: "template:template_key"
functions:
  nonjmetext§:
    definition:
      content:
        nonjmetext§: "file:path/to/file"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
    language: jme
    output_type: boolean
    parameters:
      - - nonjmetext§
        - boolean
      - - "template:template_key"
        - decimal
      - - template_key: template_key
          default_value: ~
        - dictionary
      - - ~
        - expression
      - - nonjmetext§
        - html
      - - "template:template_key"
        - integer
      - - template_key: template_key
          default_value: ~
        - key_pair
      - - ~
        - list
      - - nonjmetext§
        - matrix
      - - "template:template_key"
        - nothing
      - - template_key: template_key
          default_value: ~
        - number
      - - ~
        - range
      - - nonjmetext§
        - rational
      - - "template:template_key"
        - set
      - - template_key: template_key
          default_value: ~
        - string
      - - ~
        - vector
      - - nonjmetext§
        - extension_geogebra_applet
      - - "template:template_key"
        - "template:template_key"
      - - template_key: template_key
          default_value: ~
        - template_key: template_key
          default_value: ~
      - - ~
        - ~
      - "template:template_key"
      - template_key: template_key
        default_value: ~
preamble: "template:template_key"
navigation: "template:template_key"
extensions: "template:template_key"
diagnostic_topic_names: "template:template_key"
resources: "template:template_key"
custom_part_types: ~
rulesets:
  nonjmetext§:
    type: Display
    rules:
      broken_as_fractions: false
      mixed_fractions: false
      flat_fractions: false
      vector_as_row: false
      always_show_multiplication_sign: false
      use_dot_as_multiplication_sign: false
      matrices_without_parentheses: false

