rumbas/src/question/snapshots/rumbas__question__examples_questioninput__compile_examples-27.snap
---
source: rumbas/src/question/mod.rs
expression: "&example"
---
statement:
  content:
    nonjmetext§:
      template_key: template_key
      default_value: ~
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
advice:
  content:
    nonjmetext§:
      template_key: template_key
      default_value: ~
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
parts:
  template_key: template_key
  default_value: ~
builtin_constants:
  template_key: template_key
  default_value: ~
custom_constants:
  template_key: template_key
  default_value: ~
variables:
  nonjmetext§:
    definition: "template:template_key"
    description: "template:template_key"
    template_type:
      template_key: template_key
      default_value: ~
    group: "template:template_key"
variables_test:
  template_key: template_key
  default_value: ~
functions:
  nonjmetext§:
    definition:
      content:
        nonjmetext§: "template:template_key"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
    language: jme
    output_type: decimal
    parameters: "template:template_key"
preamble:
  template_key: template_key
  default_value: ~
navigation:
  template_key: template_key
  default_value: ~
extensions:
  template_key: template_key
  default_value: ~
diagnostic_topic_names:
  template_key: template_key
  default_value: ~
resources:
  template_key: template_key
  default_value: ~
custom_part_types: ~
rulesets:
  nonjmetext§:
    type: Display
    rules:
      broken_as_fractions: "template:template_key"
      mixed_fractions: "template:template_key"
      flat_fractions: "template:template_key"
      vector_as_row: "template:template_key"
      always_show_multiplication_sign: "template:template_key"
      use_dot_as_multiplication_sign: "template:template_key"
      matrices_without_parentheses: "template:template_key"

