rumbas/src/question/snapshots/rumbas__question__examples_questioninput__compile_examples-28.snap
---
source: rumbas/src/question/mod.rs
expression: "&example"
---
statement:
  content: "file:path/to/file"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
advice:
  content: "file:path/to/file"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
parts: ~
builtin_constants: ~
custom_constants: ~
variables:
  nonjmetext§:
    definition:
      template_key: template_key
      default_value: ~
    description:
      template_key: template_key
      default_value: ~
    template_type: ~
    group:
      template_key: template_key
      default_value: ~
variables_test: ~
functions:
  nonjmetext§:
    definition:
      content:
        nonjmetext§:
          template_key: template_key
          default_value: ~
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
    language: jme
    output_type: dictionary
    parameters:
      template_key: template_key
      default_value: ~
preamble: ~
navigation: ~
extensions: ~
diagnostic_topic_names: ~
resources: ~
custom_part_types: ~
rulesets:
  nonjmetext§:
    type: Display
    rules:
      broken_as_fractions:
        template_key: template_key
        default_value: ~
      mixed_fractions:
        template_key: template_key
        default_value: ~
      flat_fractions:
        template_key: template_key
        default_value: ~
      vector_as_row:
        template_key: template_key
        default_value: ~
      always_show_multiplication_sign:
        template_key: template_key
        default_value: ~
      use_dot_as_multiplication_sign:
        template_key: template_key
        default_value: ~
      matrices_without_parentheses:
        template_key: template_key
        default_value: ~

