rumbas/src/question/snapshots/rumbas__question__examples_questioninput__compile_examples-29.snap
---
source: rumbas/src/question/mod.rs
expression: "&example"
---
statement: "template:template_key"
advice: "template:template_key"
parts: "template:template_key"
builtin_constants: "template:template_key"
custom_constants: "template:template_key"
variables: ~
variables_test: "template:template_key"
functions:
  nonjmetext§:
    definition:
      content:
        nonjmetext§: "template:template_key"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
    language: javascript
    output_type: key_pair
    parameters:
      - - nonjmetext§
        - boolean
      - - "template:template_key"
        - decimal
      - - ~
        - dictionary
      - - nonjmetext§
        - expression
      - - "template:template_key"
        - html
      - - ~
        - integer
      - - nonjmetext§
        - key_pair
      - - "template:template_key"
        - list
      - - ~
        - matrix
      - - nonjmetext§
        - nothing
      - - "template:template_key"
        - number
      - - ~
        - range
      - - nonjmetext§
        - rational
      - - "template:template_key"
        - set
      - - ~
        - string
      - - nonjmetext§
        - vector
      - - "template:template_key"
        - extension_geogebra_applet
      - - ~
        - "template:template_key"
      - - nonjmetext§
        - ~
      - "template:template_key"
preamble: "template:template_key"
navigation: "template:template_key"
extensions: "template:template_key"
diagnostic_topic_names: "template:template_key"
resources: "template:template_key"
custom_part_types: ~
rulesets:
  nonjmetext§:
    type: Simplification
    rules:
      simplify_basic: false
      cancel_unit_factors: false
      cancel_unit_powers: false
      cancel_unit_denominators: false
      cancel_zero_factors: false
      omit_zero_terms: false
      cancel_zero_powers: false
      cancel_powers_with_base_zero: false
      collect_numbers: false
      constants_first: false
      collect_sqrt_products: false
      collect_sqrt_divisions: false
      cancel_sqrt_square: false
      evaluate_powers_of_numbers: false
      rewrite_to_no_leading_minus: false
      simplify_fractions: false
      simplify_trigonometric: false
      collect_terms: false
      collect_powers_of_common_factors: false
      collect_like_fractions: false
      order_canonical: false
      expand_brackets: false

