rumbas/src/question/snapshots/rumbas__question__examples_questioninput__compile_examples-3.snap
---
source: rumbas/src/question/mod.rs
expression: "&example"
---
statement:
  content:
    nonjmetext§:
      template_key: template_key
      default_value: ~
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
advice:
  content:
    nonjmetext§:
      template_key: template_key
      default_value: ~
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
parts:
  template_key: template_key
  default_value: ~
builtin_constants:
  e:
    template_key: template_key
    default_value: ~
  pi:
    template_key: template_key
    default_value: ~
  i:
    template_key: template_key
    default_value: ~
custom_constants:
  template_key: template_key
  default_value: ~
variables:
  nonjmetext§: x^5
variables_test:
  condition:
    template_key: template_key
    default_value: ~
  max_runs:
    template_key: template_key
    default_value: ~
functions:
  nonjmetext§:
    definition:
      content:
        nonjmetext§:
          template_key: template_key
          default_value: ~
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
    language: jme
    output_type: dictionary
    parameters:
      template_key: template_key
      default_value: ~
preamble:
  js:
    template_key: template_key
    default_value: ~
  css:
    template_key: template_key
    default_value: ~
navigation:
  can_regenerate:
    template_key: template_key
    default_value: ~
  show_title_page:
    template_key: template_key
    default_value: ~
  confirm_when_leaving:
    template_key: template_key
    default_value: ~
extensions:
  chemistry:
    template_key: template_key
    default_value: ~
  download_text_file:
    template_key: template_key
    default_value: ~
  eukleides:
    template_key: template_key
    default_value: ~
  geogebra:
    template_key: template_key
    default_value: ~
  graphs:
    template_key: template_key
    default_value: ~
  jsx_graph:
    template_key: template_key
    default_value: ~
  linear_algebra:
    template_key: template_key
    default_value: ~
  linear_codes:
    template_key: template_key
    default_value: ~
  optimisation:
    template_key: template_key
    default_value: ~
  permutations:
    template_key: template_key
    default_value: ~
  polynomials:
    template_key: template_key
    default_value: ~
  quantities:
    template_key: template_key
    default_value: ~
  random_person:
    template_key: template_key
    default_value: ~
  stats:
    template_key: template_key
    default_value: ~
  sqlite:
    template_key: template_key
    default_value: ~
  text:
    template_key: template_key
    default_value: ~
  written_number:
    template_key: template_key
    default_value: ~
diagnostic_topic_names:
  template_key: template_key
  default_value: ~
resources:
  template_key: template_key
  default_value: ~
custom_part_types: ~
rulesets:
  nonjmetext§:
    type: Simplification
    rules:
      simplify_basic:
        template_key: template_key
        default_value: ~
      cancel_unit_factors:
        template_key: template_key
        default_value: ~
      cancel_unit_powers:
        template_key: template_key
        default_value: ~
      cancel_unit_denominators:
        template_key: template_key
        default_value: ~
      cancel_zero_factors:
        template_key: template_key
        default_value: ~
      omit_zero_terms:
        template_key: template_key
        default_value: ~
      cancel_zero_powers:
        template_key: template_key
        default_value: ~
      cancel_powers_with_base_zero:
        template_key: template_key
        default_value: ~
      collect_numbers:
        template_key: template_key
        default_value: ~
      constants_first:
        template_key: template_key
        default_value: ~
      collect_sqrt_products:
        template_key: template_key
        default_value: ~
      collect_sqrt_divisions:
        template_key: template_key
        default_value: ~
      cancel_sqrt_square:
        template_key: template_key
        default_value: ~
      evaluate_powers_of_numbers:
        template_key: template_key
        default_value: ~
      rewrite_to_no_leading_minus:
        template_key: template_key
        default_value: ~
      simplify_fractions:
        template_key: template_key
        default_value: ~
      simplify_trigonometric:
        template_key: template_key
        default_value: ~
      collect_terms:
        template_key: template_key
        default_value: ~
      collect_powers_of_common_factors:
        template_key: template_key
        default_value: ~
      collect_like_fractions:
        template_key: template_key
        default_value: ~
      order_canonical:
        template_key: template_key
        default_value: ~
      expand_brackets:
        template_key: template_key
        default_value: ~

