rumbas/src/question/snapshots/rumbas__question__examples_questioninput__compile_examples-31.snap
---
source: rumbas/src/question/mod.rs
expression: "&example"
---
statement:
  template_key: template_key
  default_value: ~
advice:
  template_key: template_key
  default_value: ~
parts:
  template_key: template_key
  default_value: ~
builtin_constants:
  e:
    template_key: template_key
    default_value: ~
  pi:
    template_key: template_key
    default_value: ~
  i:
    template_key: template_key
    default_value: ~
custom_constants:
  template_key: template_key
  default_value: ~
variables: "template:template_key"
variables_test:
  condition:
    template_key: template_key
    default_value: ~
  max_runs:
    template_key: template_key
    default_value: ~
functions:
  nonjmetext§:
    definition: "template:template_key"
    language: jme
    output_type: integer
    parameters: "template:template_key"
preamble:
  js:
    template_key: template_key
    default_value: ~
  css:
    template_key: template_key
    default_value: ~
navigation:
  can_regenerate:
    template_key: template_key
    default_value: ~
  show_title_page:
    template_key: template_key
    default_value: ~
  confirm_when_leaving:
    template_key: template_key
    default_value: ~
extensions:
  chemistry:
    template_key: template_key
    default_value: ~
  download_text_file:
    template_key: template_key
    default_value: ~
  eukleides:
    template_key: template_key
    default_value: ~
  geogebra:
    template_key: template_key
    default_value: ~
  graphs:
    template_key: template_key
    default_value: ~
  jsx_graph:
    template_key: template_key
    default_value: ~
  linear_algebra:
    template_key: template_key
    default_value: ~
  linear_codes:
    template_key: template_key
    default_value: ~
  optimisation:
    template_key: template_key
    default_value: ~
  permutations:
    template_key: template_key
    default_value: ~
  polynomials:
    template_key: template_key
    default_value: ~
  quantities:
    template_key: template_key
    default_value: ~
  random_person:
    template_key: template_key
    default_value: ~
  stats:
    template_key: template_key
    default_value: ~
  sqlite:
    template_key: template_key
    default_value: ~
  text:
    template_key: template_key
    default_value: ~
  written_number:
    template_key: template_key
    default_value: ~
diagnostic_topic_names:
  template_key: template_key
  default_value: ~
resources:
  template_key: template_key
  default_value: ~
custom_part_types: ~
rulesets: "template:template_key"

