rumbas/src/question/snapshots/rumbas__question__examples_questioninput__compile_examples-34.snap
---
source: rumbas/src/question/mod.rs
expression: "&example"
---
statement:
  content:
    nonjmetext§: "template:template_key"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
advice:
  content:
    nonjmetext§: "template:template_key"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
parts: "template:template_key"
builtin_constants:
  template_key: template_key
  default_value: ~
custom_constants: "template:template_key"
variables:
  nonjmetext§:
    - nonjmetext§
    - "template:template_key"
    - template_key: template_key
      default_value: ~
grouped_variables: "template:template_key"
variables_test:
  template_key: template_key
  default_value: ~
functions:
  nonjmetext§:
    definition:
      content:
        nonjmetext§: "template:template_key"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
    language: javascript
    output_type: matrix
    parameters:
      - - nonjmetext§
        - boolean
      - - "template:template_key"
        - decimal
      - - template_key: template_key
          default_value: ~
        - dictionary
      - - ~
        - expression
      - - nonjmetext§
        - html
      - - "template:template_key"
        - integer
      - - template_key: template_key
          default_value: ~
        - key_pair
      - - ~
        - list
      - - nonjmetext§
        - matrix
      - - "template:template_key"
        - nothing
      - - template_key: template_key
          default_value: ~
        - number
      - - ~
        - range
      - - nonjmetext§
        - rational
      - - "template:template_key"
        - set
      - - template_key: template_key
          default_value: ~
        - string
      - - ~
        - vector
      - - nonjmetext§
        - extension_geogebra_applet
      - - "template:template_key"
        - "template:template_key"
      - - template_key: template_key
          default_value: ~
        - template_key: template_key
          default_value: ~
      - - ~
        - ~
      - "template:template_key"
      - template_key: template_key
        default_value: ~
preamble:
  template_key: template_key
  default_value: ~
navigation:
  template_key: template_key
  default_value: ~
extensions:
  template_key: template_key
  default_value: ~
diagnostic_topic_names: "template:template_key"
resources: "template:template_key"
custom_part_types: ~
rulesets:
  nonjmetext§:
    type: Simplification
    rules:
      simplify_basic: false
      cancel_unit_factors: false
      cancel_unit_powers: false
      cancel_unit_denominators: false
      cancel_zero_factors: false
      omit_zero_terms: false
      cancel_zero_powers: false
      cancel_powers_with_base_zero: false
      collect_numbers: false
      constants_first: false
      collect_sqrt_products: false
      collect_sqrt_divisions: false
      cancel_sqrt_square: false
      evaluate_powers_of_numbers: false
      rewrite_to_no_leading_minus: false
      simplify_fractions: false
      simplify_trigonometric: false
      collect_terms: false
      collect_powers_of_common_factors: false
      collect_like_fractions: false
      order_canonical: false
      expand_brackets: false

